Adding text to page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <h1>
             Aprendendo GitHub
         </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, inventore consequatur esse sit nam ad quisquam dignissimos asperiores deserunt modi accusamus quasi voluptatem non facilis sapiente recusandae fugit quidem error?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quia minima voluptas. Esse temporibus, veniam totam deserunt nostrum laborum, aliquam quasi magni ducimus sapiente illum facere dicta. Amet, explicabo et.</p>
     </div>
 </body>
 </html>
