Navigation menu added

--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
         </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quia minima voluptas. Esse temporibus, veniam totam deserunt nostrum laborum, aliquam quasi magni ducimus sapiente illum facere dicta. Amet, explicabo et.</p>
     </div>
+    <nav>
+        <l1>
+            <a>
+                bla bla bla bla
+            </a>
+        </l1>
+    </nav>
 </body>
 </html>
