--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
             Aprendendo GitHub
         </h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, inventore consequatur esse sit nam ad quisquam dignissimos asperiores deserunt modi accusamus quasi voluptatem non facilis sapiente recusandae fugit quidem error?
+            Aprendendo a dirigir
         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quia minima voluptas. Esse temporibus, veniam totam deserunt nostrum laborum, aliquam quasi magni ducimus sapiente illum facere dicta. Amet, explicabo et.</p>
+        <p>fatec cetaf</p>
     </div>
     <nav>
         <l1>
-            <a>
-                bla bla bla bla
-            </a>
+            <l1>dada</l1>
         </l1>
     </nav>
 </body>
